# academic_recommandation

./: .env  .env.example  .gitignore  1.任务书.docx  README.md  fix_html_entities.py  read_docs.py  start.sh  start_backend.sh  杨锴-2022212431-开题报告.docx
.trae/specs/academic-recommendation-system/: checklist.md  spec.md  tasks.md
.trae/specs/fix-browser-chat/: checklist.md  spec.md  tasks.md
.trae/specs/fix-chat-streaming-issue/: checklist.md  spec.md  tasks.md
.trae/specs/fix-frontend-backend-connection/: checklist.md  spec.md  tasks.md
.trae/specs/multimodal-academic-recommendation-system/: checklist.md  spec.md  tasks.md
.trae/specs/pre-search-multi-round-conversation/: checklist.md  spec.md  tasks.md
.trae/specs/streaming-frontend-feedback/: checklist.md  (+2 more)
backend/: .env  arxiv_crawler.py  conversation_manager.py  email_service.py  embedding_module.py  intelligence_engine.py  main.py  multimodal_retrieval.py  pdf_processor.py  personalized_recommender.py  pipeline.py  prepare_data.py  pyproject.toml  report_generator.py  requirement_collector.py  reranker.py  scheduler.py  sse_utils.py  survey_generator.py  task_scheduler.py  test_integration_v3.py  test_new_features.py  test_v4_integration.py  user_manager.py  vector_store.py
backend/secure_data/email_service/: subscribers.json
backend/test_chroma_db/: chroma.sqlite3
backend/test_data/conversations/: conversations.json
backend/test_data/integration_test/: conversations.json
backend/test_secure_data_v4/: users.json
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
(+4 files in other folders)
